# python-aiojson-log

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: github-actions.yml
aiojson_log/: log.py
aiojson_log/test/: test_log.py
ci/templates/: tox.ini
docs/: conf.py  installation.rst  usage.rst
docs/reference/: aiojson_log.rst  index.rst
tests/: test_aiojson_log.py
